<resources>
    <string name="id_server">94.230.114.34</string>
    <string name="app_name" translatable="false">KenguruExpress</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_tracks">Отправления</string>
    <string name="title_calc">Рассчитать</string>
    <string name="title_office">Личный кабинет</string>
    <string name="address_from">Откуда</string>
    <string name="address_to">Куда</string>
    <string name="documents">Документы</string>
    <string name="cargo">Груз</string>
    <string name="long_cargo">Длинна</string>
    <string name="height_cargo">Высота</string>
    <string name="width_cargo">Ширина</string>
    <string name="weight_cargo_title">Вес посылки</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="action_register">Создать аккаунт</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Добро пожаловать!"</string>
    <string name="invalid_username">Неправильный логин</string>
    <string name="invalid_password">Пароль должен быть длинной от 8 символов, иметь большую и маленькую букву</string>
    <string name="login_failed">"Login failed"</string>
    <string name="surname_hint">Фамилия</string>
    <string name="name_hint">Имя</string>
    <string name="phone_hint">Телефон</string>
    <string name="company_hint">Компания</string>
    <string name="commentary_hint">Комментарий</string>
    <string name="forgotten_password">Забыли пароль?</string>
    <string name="patronymic_hint">Отчество</string>
    <string name="price_filter">По цене</string>
    <string name="delivery_filter">По скорости доставки</string>
    <string name="tariffs_label">Тарифы</string>
    <string name="profile_label">Профиль</string>
    <string name="track_info_label">Информация о треке</string>
    <string name="passwordRetryEditText">Повторите пароль</string>
    <string name="birthDay">День рождения</string>
    <string name="updateDataText">Обновить данные</string>
    <string name="logout_menu">Logout</string>
    <string name="profileFragmentLabel">Profile</string>
    <string name="registrationFragmentLabel">Registration</string>
    <string name="costHintTextView">Цена отправления:</string>
    <string name="hintDateDelivery">Дата доставки:</string>
    <string name="hintDataPickUp">Дата получения:</string>
    <string name="accept">Accept</string>


</resources>